# Connect-Four

./: .gitignore  LICENSE  README.md  connect-four.cabal  stack.yaml
pera1/: .gitignore  1  ChangeLog.md  README.md  package.yaml
pera1/src/: Lib.hs
src/: Board.hs  Config.hs  Display.hs  Game.hs  Logic.hs  Main.hs  Pictures.hs
