name:                connect-four
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/Grula/Connect-Four#readme
license:             BSD3
license-file:        LICENSE
author:              Nikola Grulovic
maintainer:          n.grulovic@outlook.com
copyright:           2019 Nikola Grulovic
category:            Game
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable connect-four
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:	   Board Config Pictures Display Game
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       gloss == 1.10.2.5,
                       gloss-game == 0.3.3.0,
                       gloss-juicy == 0.2.2,
                       matrix >= 0.3,
                       vector
